alacritty: add dynamic_padding

--- a/dot_config/alacritty/alacritty.toml
+++ b/dot_config/alacritty/alacritty.toml
@@ -142,7 +142,8 @@ key = "L"
 mods = "Command|Shift"
 
 [window]
-decorations = "none"
+decorations = "None"
 opacity = 0.95
 blur = true
 startup_mode = "Maximized"
+dynamic_padding = true
